--- a/style.css
+++ b/style.css
@@ -70,6 +70,21 @@ p {
   color: #9326FF !important;
 }
 
+.arrow-light-bulb {
+  background-image: url('./img/arrow.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 7%;
+  right: 6%;
+  z-index: 2;
+  transform: scaleX(1);
+  margin: 25px;
+}
+
 .light-bulb {
   background-image: url('./img/light-bulb-off.png');
   background-repeat: no-repeat;
@@ -225,7 +240,7 @@ ul {
 
 li {
   display: inline;
-  padding: 8px;
+  padding: 5px;
 }
 
 /* MEDIA QUERY */
